remake server cmd